# zipper

./: .clang-format  .gitignore  .projections.json  AGENTS.md  ANALYSIS.md  Doxyfile  LICENSE  README.md  compile_flags.txt  conanfile.py  meson.build  meson_options.txt  setup.sh
.github/scripts/: dependencies.sh
.github/workflows/: conan.yml  continuous.yml  continuous_integration.yml  docs.yml
.github/workflows/conan_profiles/: ubuntu-latest-debug.yaml  ubuntu-latest-release.yaml
examples/: meson.build  static_fma.cpp
include/uvl/: Array.hpp  ArrayBase.hpp  Form.hpp  FormBase.hpp  Matrix.hpp  MatrixBase.hpp  Tensor.hpp  TensorBase.hpp  UVLBase.hpp  Vector.hpp  VectorBase.hpp  types.hpp
include/uvl/concepts/: ArrayBaseDerived.hpp  ExtentsType.hpp  FormBaseDerived.hpp  IndexLike.hpp  IndexList.hpp  IndexPackLike.hpp  LinearView.hpp  MappedViewDerived.hpp  MatrixBaseDerived.hpp  MatrixViewDerived.hpp  SliceLike.hpp  SlicePackLike.hpp  TensorBaseDerived.hpp  TensorViewDerived.hpp  TupleLike.hpp  UVLBaseDerived.hpp  UVLBased.hpp  VectorBaseDerived.hpp  VectorViewDerived.hpp  ViewAccessPack.hpp  ViewAccessTuple.hpp  ViewDerived.hpp  all.hpp
include/uvl/detail/: ExtentsTraits.hpp  all_extents_indices.hpp  convert_extents.hpp  declare_operations.hpp  dynamic_extent_indices.hpp  dynamic_extents_indices.hpp  extents_formatter.hpp  is_integral_constant.hpp  pack_index.hpp  sequence_to_array.hpp  swizzle_extents.hpp  tuple_size.hpp
include/uvl/storage/: DenseStorage.hpp  DynamicDenseData.hpp  DynamicPlainObjectStorage.hpp  DynamicView.hpp  PlainObjectAccessor.hpp  PlainObjectStorage.hpp  StaticPlainObjectStorage.hpp  StaticView.hpp  StorageBase.hpp  ViewBase.hpp
include/uvl/views/: DimensionedViewBase.hpp  DynamicMappedViewBase.hpp  DynamicViewBase.hpp  MappedViewBase.hpp  PlainObjectViewBase.hpp  StaticMappedViewBase.hpp  StaticViewBase.hpp  ViewBase.hpp
include/zipper/: Array.hpp  ArrayBase.hpp  ArrayBase.hxx  COOMatrix.hpp  COOVector.hpp  CSMatrix.hpp  CSRMatrix.hpp  CSRVector.hpp  CSVector.hpp  Container.hpp  ContainerBase.hpp  ContainerBase.hxx  DataArray.hpp  DataArrayBase.hpp  DataArrayBase.hxx  Form.hpp  FormBase.hpp  FormBase.hxx  FormSpan.hpp  Matrix.hpp  MatrixBase.hpp  MatrixBase.hxx  MatrixSpan.hpp  Quaternion.hpp  QuaternionBase.hpp  Ref.hpp  SparseEntry.hpp  Tensor.hpp  TensorBase.hpp  TensorBase.hxx  TensorSpan.hpp  UVLBase.hpp  Vector.hpp  VectorBase.hpp  VectorBase.hxx  VectorSpan.hpp  ZipperBase.hpp  as.hpp  exterior.hpp  groups.dox  (+2 more)
include/zipper/concepts/: Algebraic.hpp  Array.hpp  ArrayBaseDerived.hpp  Container.hpp  DataArray.hpp  DirectSolver.hpp  Expression.hpp  Extents.hpp  ExtentsType.hpp  Form.hpp  FormBaseDerived.hpp  Index.hpp  IndexArgument.hpp  Matrix.hpp  (+32 more)
subprojects/: .gitignore  mdspan.wrap  range-v3.wrap
tests/: array.cpp  catch_include.hpp  container.cpp  data_array.cpp  exterior.cpp  fmt_include.hpp  matrix.cpp  meson.build  readme_examples.cpp  span_construction.cpp  sparse_types.cpp  struct.cpp  test_array.cpp  test_concepts.cpp  test_declare_operations.cpp  test_expressions.cpp  test_extents.cpp  test_function_boundary.cpp  test_hello_world.cpp  test_integral_constants.cpp  test_iterate.cpp  test_matrix.cpp  test_ref.cpp  test_slicing.cpp  test_span.cpp  test_struct.cpp  test_swizzle.cpp  test_tensor.cpp  test_vector.cpp  vector.cpp  zipperbase_stl.cpp
tests/concepts/: concepts.cpp  meson.build
tests/detail/: constexpr_arithmetic.cpp  declare_operations.cpp  extents.cpp  integral_constants.cpp  meson.build  test_constexpr_arithmetic.cpp  test_integral_constants.cpp
tests/expression/: expressions.cpp  meson.build  ownership.cpp  test_dynamic_extents.cpp  test_homogeneous.cpp  test_index_set.cpp  test_nonzero_range.cpp  test_products.cpp  test_slicing.cpp  test_swizzle.cpp  test_vector.cpp  test_zero_aware_operation.cpp
tests/expression/binary/: addition.cpp  coeff_product.cpp  cross_product.cpp  form_tensor_product.cpp  matrix_product.cpp  meson.build  tensor_product.cpp  test_zero_aware_multiply.cpp
tests/expression/nullary/: constant.cpp  identity.cpp  iota.cpp  mdarray.cpp  mdspan.cpp  meson.build  random.cpp  static_constant.cpp
tests/expression/reductions/: coefficient_reductions.cpp  contraction.cpp  determinant.cpp  meson.build  norms.cpp  trace.cpp
tests/expression/unary/: abs.cpp  anti_slice.cpp  cast.cpp  cofactor.cpp  diagonal.cpp  extent_view.cpp  homogeneous.cpp  lift.cpp  math_functions.cpp  meson.build  partial_reduction.cpp  partial_transform.cpp  repeat.cpp  reshape.cpp  scalar_arithmetic.cpp  scalar_power.cpp  slice.cpp  swizzle.cpp  triangular_view.cpp
tests/integration/: hello_world.cpp  meson.build
tests/storage/: accessor.cpp  data.cpp  dense.cpp  meson.build  sizeof.cpp  span.cpp  sparse_compressed_accessor.cpp  sparse_compressed_data.cpp  sparse_coordinate_accessor.cpp  stl_storage.cpp
tests/storage/concepts/: meson.build
tests/transform/: meson.build  test_affine_transform.cpp  test_common.cpp  test_coordinate.cpp  test_decompose.cpp  test_geometric.cpp  test_model.cpp  test_projection.cpp  test_quaternion.cpp  test_quaternion_transform.cpp  test_specialized_transforms.cpp  test_transform.cpp  test_view.cpp
tests/utils/: determinant.cpp  format.cpp  inverse.cpp  meson.build  minmax.cpp  suitesparse.cpp  test_arnoldi.cpp  test_determinant.cpp  test_eigenvalue.cpp  test_lanczos.cpp  test_ldlt.cpp  test_llt.cpp  test_lu.cpp  test_matrix_utils.cpp  test_minmax.cpp  test_multigrid.cpp  test_pcg.cpp  test_polar.cpp  test_power_method.cpp  test_qr.cpp  test_solver.cpp  test_sparse_decompositions.cpp  test_sparse_ops.cpp  test_svd.cpp  test_triangular_solve.cpp
tests/utils/extents/: dynamic.cpp  iterate.cpp  meson.build  offset.cpp  test_iterate.cpp
tests/views/: meson.build  test_homogeneous.cpp  test_products.cpp  test_slicing.cpp  test_span.cpp  test_swizzle.cpp  test_vector.cpp
tests/views/nullary/: constant.cpp  identity.cpp  meson.build  random.cpp
tests/views/reductions/: determinant.cpp  meson.build
tests/views/unary/: cast.cpp  meson.build  partial_reduction.cpp  repeat.cpp
(+458 files in other folders)
