test_common = executable('test_transform_common', 'test_common.cpp', dependencies: [zipper_test_dep])
test('transform_common', test_common)

test_projection = executable('test_transform_projection', 'test_projection.cpp', dependencies: [zipper_test_dep])
test('transform_projection', test_projection)

test_view = executable('test_transform_view', 'test_view.cpp', dependencies: [zipper_test_dep])
test('transform_view', test_view)

test_model = executable('test_transform_model', 'test_model.cpp', dependencies: [zipper_test_dep])
test('transform_model', test_model)

test_geometric = executable('test_transform_geometric', 'test_geometric.cpp', dependencies: [zipper_test_dep])
test('transform_geometric', test_geometric)

test_coordinate = executable('test_transform_coordinate', 'test_coordinate.cpp', dependencies: [zipper_test_dep])
test('transform_coordinate', test_coordinate)

test_quaternion = executable('test_quaternion', 'test_quaternion.cpp', dependencies: [zipper_test_dep])
test('quaternion', test_quaternion)

test_quaternion_transform = executable('test_quaternion_transform', 'test_quaternion_transform.cpp', dependencies: [zipper_test_dep])
test('quaternion_transform', test_quaternion_transform)

test_affine_transform = executable('test_affine_transform', 'test_affine_transform.cpp', dependencies: [zipper_test_dep])
test('affine_transform', test_affine_transform)

test_transform = executable('test_transform', 'test_transform.cpp', dependencies: [zipper_test_dep])
test('transform', test_transform)

test_specialized = executable('test_specialized_transforms', 'test_specialized_transforms.cpp', dependencies: [zipper_test_dep])
test('specialized_transforms', test_specialized)
