test_format = executable('test_format', 'format.cpp', dependencies: [zipper_test_dep])
test('format', test_format)

test_determinant = executable('test_determinant', 'test_determinant.cpp', dependencies: [zipper_test_dep])
test('determinant', test_determinant)

test_minmax = executable('test_minmax', 'test_minmax.cpp', dependencies: [zipper_test_dep])
test('minmax', test_minmax)

test_power_method = executable('test_power_method', 'test_power_method.cpp', dependencies: [zipper_test_dep])
test('power_method', test_power_method)

subdir('extents')
