test_format = executable('test_format', 'format.cpp', dependencies: [zipper_test_dep])
test('format', test_format)

test_determinant = executable('test_determinant', 'determinant.cpp', dependencies: [zipper_test_dep])
test('determinant', test_determinant)

test_minmax = executable('test_minmax', 'minmax.cpp', dependencies: [zipper_test_dep])
test('minmax', test_minmax)

test_inverse = executable('test_inverse', 'inverse.cpp', dependencies: [zipper_test_dep])
test('inverse', test_inverse)

test_power_method = executable('test_power_method', 'test_power_method.cpp', dependencies: [zipper_test_dep])
test('power_method', test_power_method)

test_arnoldi = executable('test_arnoldi', 'test_arnoldi.cpp', dependencies: [zipper_test_dep])
test('arnoldi', test_arnoldi)

test_solver = executable('test_solver', 'test_solver.cpp', dependencies: [zipper_test_dep])
test('solver', test_solver)

test_qr = executable('test_qr', 'test_qr.cpp', dependencies: [zipper_test_dep])
test('qr', test_qr)

subdir('extents')
