test_format = executable('test_format', 'format.cpp', dependencies: [zipper_test_dep])
test('format', test_format)

test_determinant = executable('test_determinant', 'determinant.cpp', dependencies: [zipper_test_dep])
test('determinant', test_determinant)

test_minmax = executable('test_minmax', 'minmax.cpp', dependencies: [zipper_test_dep])
test('minmax', test_minmax)

test_inverse = executable('test_inverse', 'inverse.cpp', dependencies: [zipper_test_dep])
test('inverse', test_inverse)

test_power_method = executable('test_power_method', 'test_power_method.cpp', dependencies: [zipper_test_dep])
test('power_method', test_power_method)

test_arnoldi = executable('test_arnoldi', 'test_arnoldi.cpp', dependencies: [zipper_test_dep])
test('arnoldi', test_arnoldi)

test_solver = executable('test_solver', 'test_solver.cpp', dependencies: [zipper_test_dep])
test('solver', test_solver)

test_qr = executable('test_qr', 'test_qr.cpp', dependencies: [zipper_test_dep])
test('qr', test_qr)

test_triangular_solve = executable('test_triangular_solve', 'test_triangular_solve.cpp', dependencies: [zipper_test_dep])
test('triangular_solve', test_triangular_solve)

test_llt = executable('test_llt', 'test_llt.cpp', dependencies: [zipper_test_dep])
test('llt', test_llt)

test_ldlt = executable('test_ldlt', 'test_ldlt.cpp', dependencies: [zipper_test_dep])
test('ldlt', test_ldlt)

test_lu = executable('test_lu', 'test_lu.cpp', dependencies: [zipper_test_dep])
test('lu', test_lu)

test_pcg = executable('test_pcg', 'test_pcg.cpp', dependencies: [zipper_test_dep])
test('pcg', test_pcg)

test_multigrid = executable('test_multigrid', 'test_multigrid.cpp', dependencies: [zipper_test_dep])
test('multigrid', test_multigrid)

subdir('extents')
