subdir('nullary')
# subdir('unary')
#
#test_span = executable('test_span', 'test_span.cpp', dependencies: [zipper_test_dep])
#test('span', test_span)
#
#test_slicing = executable('test_slicing', 'test_slicing.cpp', dependencies: [zipper_test_dep])
#test('slicing', test_slicing)

#test_swizzle = executable('test_swizzle', 'test_swizzle.cpp', dependencies: [zipper_test_dep])
#test('swizzle', test_swizzle)
#
#test_views = executable(
#  'test_views',
#  ['test_vector.cpp', 'test_products.cpp', 'test_homogeneous.cpp'],
#  dependencies: [zipper_test_dep],
#)
#test('views', test_views)
#
#subdir('reductions')
