sources = [
  'partial_reduction.cpp',
  'repeat.cpp',
  'cast.cpp',
  'scalar_arithmetic.cpp',
  'reshape.cpp',
  'cofactor.cpp',
  'slice.cpp',
  'swizzle.cpp',
  'homogeneous.cpp',
]
test_unary_views = executable('test_unary_views', sources, dependencies: [zipper_test_dep])
test('unary_views', test_unary_views)
